# nature-image-classification

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  outputs.dvc  pyproject.toml
configs/: baseline.yaml  train.yaml
nature_image_classification/: data_split.py  train.py
