[project]
name = "nature-image-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.65.0",
    "fire>=0.7.1",
    "hydra-core>=1.3.2",
    "mlflow>=3.8.0",
    "pytorch-lightning>=2.6.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]
